--- a/Sample/app/src/main/res/layout/activity_identification.xml
+++ b/Sample/app/src/main/res/layout/activity_identification.xml
@@ -55,10 +55,10 @@
                 android:layout_height="match_parent"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
-                android:layout_marginStart="5dp"
-                android:layout_marginLeft="5dp"
-                android:layout_marginEnd="0dp"
-                android:layout_marginRight="0dp"
+                android:layout_marginStart="7dp"
+                android:layout_marginLeft="7dp"
+                android:layout_marginEnd="3dp"
+                android:layout_marginRight="3dp"
                 android:layout_toEndOf="@id/image_control"
                 android:layout_toRightOf="@id/image_control"
                 android:background="#E0E0E0"
@@ -152,14 +152,14 @@
 
         <Button
             android:id="@+id/identify"
+            style="@style/ButtonStyle"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:layout_marginRight="@dimen/view_margin"
             android:layout_marginEnd="@dimen/view_margin"
-            android:text="@string/identify"
+            android:layout_marginRight="@dimen/view_margin"
+            android:layout_weight="1"
             android:onClick="identify"
-            style="@style/ButtonStyle" />
+            android:text="@string/identify" />
 
         <Button
             android:id="@id/view_log"
