--- a/Sample/app/src/main/res/layout/activity_open_flir_image.xml
+++ b/Sample/app/src/main/res/layout/activity_open_flir_image.xml
@@ -13,36 +13,45 @@
         android:text="@string/thermal_sdk_version" />
 
     <Button
+        android:id="@+id/select_image"
         style="@style/ButtonStyle"
-        android:layout_width="102dp"
+        android:layout_width="114dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/view_margin"
-        android:layout_marginLeft="@dimen/view_margin"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
         android:onClick="selectImage"
         android:text="@string/select_image" />
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="303dp"
+        android:layout_height="347dp"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/ir_image"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"/>
-
         <!--        <ImageView-->
-        <!--            android:id="@+id/dc_and_ir_image"-->
-        <!--            android:layout_width="100dp"-->
-        <!--            android:layout_height="100dp"/>-->
+        <!--            android:id="@id/image"-->
+        <!--            android:layout_width="0dp"-->
+        <!--            android:layout_height="match_parent"-->
+        <!--            android:layout_toRightOf="@id/image_control"-->
+        <!--            android:layout_toEndOf="@id/image_control"-->
+        <!--            android:layout_weight="1"-->
+        <!--            android:background="#E0E0E0"-->
+        <!--            android:contentDescription="@string/detection" />-->
+
 
         <ImageView
             android:id="@+id/visual_image"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1" />
-    </LinearLayout>
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <ImageView
+            android:id="@+id/ir_image"
+            android:layout_width="130dp"
+            android:layout_height="130dp"
+            android:layout_gravity="bottom|right" />
+
+
+    </FrameLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
