--- a/Sample/app/src/main/res/layout/activity_open_flir_image.xml
+++ b/Sample/app/src/main/res/layout/activity_open_flir_image.xml
@@ -12,6 +12,15 @@
 <!--        android:layout_height="wrap_content"-->
 <!--        android:text="@string/thermal_sdk_version" />-->
 
+
+    <ListView
+        android:id="@+id/list_person_groups_identify"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.4"
+        android:background="#E0E0E0"
+        android:verticalSpacing="@dimen/view_margin" />
+
     <LinearLayout
         android:id="@id/button_bar"
         android:layout_width="match_parent"
@@ -42,14 +51,6 @@
             android:text="@string/manage_person_groups" />
 
     </LinearLayout>
-
-    <ListView
-        android:id="@+id/list_person_groups_identify"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.4"
-        android:background="#E0E0E0"
-        android:verticalSpacing="@dimen/view_margin" />
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -95,6 +96,7 @@
             android:text=""
             android:textSize="30dp"
             android:layout_gravity="center"
+            android:autoSizeTextType="uniform"
             style="@style/TextAppearance.AppCompat.Title"
             />
 
@@ -134,24 +136,24 @@
 
 
     </LinearLayout>
-    <LinearLayout
-        android:id="@id/button_bar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:orientation="horizontal" >
+<!--    <LinearLayout-->
+<!--        android:id="@id/button_bar"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_alignParentBottom="true"-->
+<!--        android:orientation="horizontal" >-->
 
-        <Button
-            android:id="@+id/identify"
-            style="@style/ButtonStyle"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginEnd="@dimen/view_margin"
-            android:layout_marginRight="@dimen/view_margin"
-            android:layout_weight="0.64"
-            android:onClick="identify"
-            android:text="@string/identify" />
-    </LinearLayout>
+<!--        <Button-->
+<!--            android:id="@+id/identify"-->
+<!--            style="@style/ButtonStyle"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:layout_marginEnd="@dimen/view_margin"-->
+<!--            android:layout_marginRight="@dimen/view_margin"-->
+<!--            android:layout_weight="0.64"-->
+<!--            android:onClick="identify"-->
+<!--            android:text="@string/identify" />-->
+<!--    </LinearLayout>-->
 
     <ListView
         android:id="@+id/list_identified_faces"
