--- a/Sample/app/src/main/res/layout/activity_open_flir_image.xml
+++ b/Sample/app/src/main/res/layout/activity_open_flir_image.xml
@@ -17,7 +17,7 @@
         android:id="@+id/list_person_groups_identify"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.4"
+        android:layout_weight="0.35"
         android:background="#E0E0E0"
         android:verticalSpacing="@dimen/view_margin" />
 
@@ -162,6 +162,19 @@
         android:background="#E0E0E0"
         android:verticalSpacing="@dimen/view_margin" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.1"
+        android:orientation="vertical">
+    <Button
+        android:id="@+id/go"
+        style="@style/ButtonStyle"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:onClick="identification"
+        android:text="GO" />
+    </LinearLayout>
 
 
 </LinearLayout>
