Person Name和Person Group Name傳上雲端 新增介面: 選擇personGroup

--- a/Sample/app/src/main/res/layout/activity_open_flir_image.xml
+++ b/Sample/app/src/main/res/layout/activity_open_flir_image.xml
@@ -40,15 +40,15 @@
             android:text="@string/select_image" />
 
         <Button
-            android:id="@+id/manage_person_groups"
+            android:id="@+id/setting"
             style="@style/ButtonStyle"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginEnd="@dimen/view_margin"
             android:layout_marginRight="@dimen/view_margin"
             android:layout_weight="1"
-            android:onClick="managePersonGroups"
-            android:text="@string/manage_person_groups" />
+            android:onClick="setting"
+            android:text="setting" />
         <Button
             android:id="@+id/getJson"
             style="@style/ButtonStyle"
